--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,18 @@ li:hover a {
   text-align: center;
 }
 
+.npm-logo {
+  width: 60px;
+  margin-top: -15px;
+  margin-left: 10px;
+}
+
 /* Scroll Bar CSS Starts */
 
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 /* Track */
@@ -136,29 +143,14 @@ li:hover a {
   margin-left: 33.2%;
 }
 
-a.no-underline, a.no-underline:hover {
+a.no-underline,
+a.no-underline:hover {
   text-decoration: none;
-}
-
-#home {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../img/bg-img.jpg");
-  /* Position and center the image to scale nicely on all screens */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-#home-text {
-  position: absolute;
-  top: 15%;
-  left: 10%;
-  color: ghostwhite;
 }
 
 section {
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .heading {
@@ -171,94 +163,18 @@ section {
   font-family: "Quicksand", Arial, sans-serif;
 }
 
-.about-desc {
-  padding-left: 25px;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 1.8;
-  color: rgba(0, 0, 0, 0.7);
-}
-
-.card-deck .about-project-desc {
-  color: white;
-  font-size: 20px;
-}
-
-.tech-card {
-  /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  height: 150px;
-}
-
-.tech-card.web {
-  border-bottom: 2px solid red;
-}
-.tech-card.database {
-  border-bottom: 2px solid #f9bf3f;
-}
-.tech-card.mobile {
-  border-bottom: 2px solid blue;
-}
-
-.card-desc {
-  text-align: center;
-  padding-top: 50px;
-  font-size: 17px;
-}
-
 /* Right Side Style Ends */
-
-/* Media css starts */
 
 @media (max-width: 500px) {
   .main {
     margin: 0;
   }
 
-  .tech-card {
+  .fit-xs {
     margin: 20px 40px;
   }
-}
 
-@media (max-width: 1000px) {
-  #home-text {
-    top: 75%;
-    left: 15%;
+  .hidden-xs {
+    display: none;
   }
 }
-
-@media (min-width: 763px) and (max-width: 1024px) {
-  .card-desc {
-    padding-top: 40px;
-    font-size: 14px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .card-md-lg-plr {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
-/* Media css Ends */
-
-/* Flat Icon Colors Starts */
-
-.flaticon-code {
-  color: red;
-}
-
-.flaticon-database {
-  color: #f9bf3f;
-}
-
-.flaticon-smartphone {
-  color: blue;
-}
-
-.flaticon-github-logo {
-  color: black;
-}
-
-/* Flat Icon Colors Ends */
