--- a/css/education.css
+++ b/css/education.css
@@ -16,8 +16,8 @@
 }
 
 .education-content {
-    padding: 15px 18px;
-    display: none;
+    padding: 15px 35px;
+    display: block;
     overflow: hidden;
     border: 1px solid #e6e6e6;
     width: 100%;
