--- a/css/work.css
+++ b/css/work.css
@@ -18,7 +18,7 @@
   backface-visibility: hidden;
 }
 
-.bell-canada {
+.telecom-canada {
   background-color: #003778;
 }
 
@@ -26,7 +26,7 @@
   background-color: #573e96;
 }
 
-.bell-canada,
+.telecom-canada,
 .drl {
   color: white;
 }
@@ -104,7 +104,7 @@
     padding: 54% 0;
   }
 
-  .work-project-details.bell-ca {
+  .work-project-details.telecom-ca {
     top: 60%;
   }
 
@@ -126,7 +126,7 @@
     padding: 48% 0;
   }
 
-  .work-project-details.bell-ca {
+  .work-project-details.telecom-ca {
     top: 50%;
   }
 
@@ -152,7 +152,7 @@
     top: 35%;
   }
 
-  .work-project-details.bell-ca {
+  .work-project-details.telecom-ca {
     top: 40%;
   }
 
