--- a/css/style.css
+++ b/css/style.css
@@ -8995,7 +8995,9 @@ h1, h2, h3, h4, h5,
       text-transform: uppercase;
       letter-spacing: 2px;
       font-size: 12px;
-      font-weight: 600; }
+      font-weight: 600;
+      border-bottom: 1px solid;
+    }
     @media (max-width: 767.98px) {
       .project .text {
         opacity: 1; }
@@ -9079,7 +9081,7 @@ textarea.form-control {
 .ftco-footer {
   font-size: 16px;
   background: #000000;
-  padding: 7em 0;
+  padding: 0;
   z-index: 0; }
   .ftco-footer .ftco-footer-logo {
     text-transform: uppercase;
@@ -9672,3 +9674,29 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+/* Scroll Bar CSS Starts */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(22, 22, 20, 0.541);
+  border-radius: 5px;
+}
+
+/* Scroll Bar CSS Ends*/
+
+.pwa-w {
+  color: #57d131;
+}
